driver add logging and screenshotting + minor refactoring (no idea if it works)